--- a/src/scss/base/_darkMode.scss
+++ b/src/scss/base/_darkMode.scss
@@ -1,6 +1,10 @@
 .dark-mode {
     background-color: darken($grisOscuro, 10);
 
+    tbody {
+        color: $blanco;
+        padding: 2rem;
+    }
     p {
         color: $blanco;
     }
@@ -18,7 +22,7 @@
             filter: invert(100%);
         }
     }
-    .texto-nosotros {
+    .texto-nosotros blockquote {
         color: $blanco;
     }
     .formulario {
